# boeidl

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
crates/boeidl/: Cargo.toml
crates/boeidl/src/: ast.rs  grammar.pest  lib.rs  main.rs  parser.rs  validator.rs
crates/boeidl/src/codegen/: mod.rs  rust.rs
crates/boeidl/src/runtime/: bytes.rs  encode.rs  errors.rs  mod.rs  sanitize.rs
crates/boeidl/tests/: codegen_130.rs  parse_130.rs  parse_envelope.rs  parse_model.rs  validate_130.rs  validate_303.rs
docs/plans/: 2026-04-08-modelo303.md  2026-07-14-envelope-130-B-dsl.md  2026-07-14-envelope-130.md
example/: Cargo.toml  build.rs
example/src/: generated.rs  lib.rs  main.rs
example/tests/: roundtrip.rs  roundtrip_envelope.rs  roundtrip_sobre.rs
models/: mod130.boe  mod130_envelope.boe  mod130_sobre.boe  mod303.boe
nix/: formatter.nix
nix/devshells/: default.nix
scripts/: gen_mod303_page.py
testdata/: mod130_expected.rs
